# notify-papers

./: .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
scripts/: build_lambda.sh  deploy.sh  test-local.sh
src/report_papers/: __init__.py  arxiv_client.py  config.py  email_notifier.py  interface.py  llm_client.py  logger.py  main.py  s3_storage.py  teams_notifier.py  translator.py
terraform/: main.tf  outputs.tf  providers.tf  response.json  terraform.tfvars.example  variables.tf
