[project]
name = "report-papers"
version = "0.1.0"
description = "ArXiv paper auto-collection AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "only-managed"

[tool.mypy]
strict = true
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.12"
show_column_numbers = true

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/report_papers"]

[dependency-groups]
dev = [
    "mypy",
    "pytest>=8.4.1",
    "ruff",
    "types-requests>=2.32.4.20250809",
]
